c2prj1_cards/grade.txt
Grading at Tue Jun 16 08:49:50 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:112:21: error: request for member ‘SPADES’ in something not a structure or union
     temp.suit = suit.SPADES;
                     ^
cards.c:115:21: error: request for member ‘HEARTS’ in something not a structure or union
     temp.suit = suit.HEARTS;
                     ^
cards.c:118:21: error: request for member ‘DIAMONDS’ in something not a structure or union
     temp.suit = suit.DIAMONDS;
                     ^
cards.c:121:21: error: request for member ‘CLUBS’ in something not a structure or union
     temp.suit = suit.CLUBS;
                     ^
cards.c:107:10: error: variable ‘suit’ set but not used [-Werror=unused-but-set-variable]
   suit_t suit;
          ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
